discovery/02svc_web_nodeport.yaml
apiVersion: v1
kind: Pod

metadata:
  name: web
  namespace: dev
  labels:
    app: web

spec:
  containers:
    - name: web
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - name: port0
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-web
  namespace: dev
spec:
  # ClusterIP | LoadBalancer |
  type: NodePort
  #  clusterIP: None
  selector:
    app: web
  ports:
    - name: http
      port: 80 # service port
      targetPort: 80 # 容器nginx 的port
      nodePort: 30080 #暴露到node的port
