discovery/03svc_web_loadbalancer.yaml
apiVersion: v1
kind: Pod

metadata:
  name: web
  namespace: test
  labels:
    app: web

spec:
  containers:
    - name: web
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - name: port0
          containerPort: 80
#          hostPort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: svc-web-lb
  namespace: test
spec:
  # ClusterIP | LoadBalancer |
  #vip -> real cluster node ip(speaker)
  type: LoadBalancer
  #  clusterIP: None
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: 80
