discovery/04ingress_web.yaml
apiVersion: v1
kind: Pod

metadata:
  name: web
  namespace: dev
  labels:
    app: web

spec:
  containers:
    - name: web
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - name: port0
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-web
  namespace: dev
spec:
  # ClusterIP | LoadBalancer | NodePort
  type: clusterIP
  #  clusterIP: None
  selector:
    app: web
  ports:
    - name: http
      port: 80 # service port
      targetPort: 80 # 容器nginx 的port
      # nodePort: 30080 #暴露到node的port

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  #  ingressClassName: nginx-example
  rules:
    - host: "foo.bar.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-web
                port:
                  number: 80
